# rust-mumble-protocol

./: Cargo.toml  README.md  build.rs
examples/: echo_client.rs
src/: control.rs  crypt.rs  ping.rs
