[package]
name = "mumble-protocol-2x"
version = "0.6.0"
authors = [
  "Marco Rebhan <me@dblsaiko.net>",
  "Jonas Herzig <me@johni0702.de>"
]
edition = "2021"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/2xsaiko/rust-mumble-protocol"

[features]
default = ["tokio-codec"]
webrtc-extensions = []
tokio-codec = ["tokio-util"]

[build-dependencies]
protobuf-codegen = "3"

[dependencies]
bytes = "1.0"
byteorder = "1"
tokio-util = { version = "0.7", features = ["codec"], optional = true }
asynchronous-codec = { version = "0.7", optional = true }
protobuf = "3"
cfg-if = "1.0.0"
rand = { version = "0.9.0", features = ["thread_rng"] }
memsec = "0.7.0"
aes = "0.8.4"

[dev-dependencies]
argparse = "0.2"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
